# fstester

./: .gitignore  README.md
setter/: .editorconfig  CMakeLists.txt  CMakeSettings.json  build.sh  codealike.json  consts.h  defs.h  dos.c  dos.h  dos.mk  dos.mk1  dosos2.h  fstester.setter.code-workspace  linux.c  linux.h  macos.c  macos.h  macos.r  main.c  main.h  mtoolsrc  os2_16.c  os2_16.h  os2_16.mk  os2_16.mk1  os2_32.c  os2_32.h  os2_32.mk  os2_32.mk1  pack.sh  unix.c  unix.h  win32.c  win32.h  win32.lk1  win32.mk  win32.mk1  win32.tgt  win32.wpj  xattrs.h
setter/binaries/: fssetter.linux.3.2.x86_64
setter/binaries/amigaos/: fssetter
setter/binaries/amigaos4/: fssetter
setter/binaries/aros/x86_64/: fssetter
setter/binaries/atarist/: fssetter.ttp
setter/binaries/macos/cwpro1/: fssetter.hqx
setter/binaries/macos/cwpro3/: fssetter.hqx
setter/binaries/morphos/: fssetter
setter/binaries/nextstep/: fssetter
setter/binaries/openbsd/amd64/: fssetter
setter/binaries/rhapsody/: fssetter
setter/binaries/z80/: README.md
setter/binaries/z80/adam/: README.md  fssetter.img
setter/binaries/z80/amstrad_cpc/: README.md  fssetter.dsk
setter/binaries/z80/amstrad_cpm/: README.md  fssetter.dsk
setter/binaries/z80/amstrad_pcw40/: README.md  fssetter.dsk
setter/binaries/z80/amstrad_pcw80/: README.md  fssetter.dsk
setter/binaries/z80/attache/: README.md  fssetter.dsk
setter/binaries/z80/bic/: README.md  fssetter.dump
setter/binaries/z80/bondwell/: README.md  fssetter.dsk
setter/binaries/z80/bondwell2/: README.md  fssetter.dsk
setter/binaries/z80/c128/: FSSETTER  FSSETTER.LDR  README.md
setter/binaries/z80/einstein/: README.md  fssetter.dsk
setter/binaries/z80/excali64/: README.md  fssetter.img
setter/binaries/z80/kaypro83/: README.md
setter/binaries/z80/kaypro84/: README.md  fssetter.dsk
setter/projects/: README.md
setter/projects/applepb/: README.md
setter/projects/borland/: README.md
setter/projects/make/: README.md
setter/projects/msc60/: README.md
setter/projects/msc70/: README.md  fstester.mak
setter/projects/msvc/: README.md
setter/projects/msvc10/: FSSETTER.MAK
setter/projects/msvs/: README.md
setter/projects/openwatcom2/: dos.wpj  fssetter-dos-ow2.tgt  fssetter-os2-286-ow2.tgt  fssetter-os2-386-ow2.tgt  fssetter-win32-x86-ow2.tgt  fssetter.netware.ow2.tgt  netware.wpj  os2_16.wpj  os2_32.wpj  win32.wpj
setter/projects/symantec/: README.md
setter/projects/vscode/: README.md  fssetter.dos.ow2-linux.code-workspace  fssetter.dos.ow2.code-workspace  fssetter.netware.ow2.code-workspace  fssetter.os2_16.ow2-linux.code-workspace  fssetter.os2_16.ow2.code-workspace  fssetter.os2_32.ow2-linux.code-workspace  fssetter.os2_32.ow2.code-workspace  fssetter.win32-linux.ow2.code-workspace  fssetter.win32.ow2.code-workspace
setter/projects/watcom/: README.md
setter/projects/watcom11/: dos.wpj  fssetter-dos-w11.tgt  fssetter-os2-286-w11.tgt  fssetter-os2-386-w11.tgt  fssetter-win32-x86-w11.tgt  netware.tgt  netware.wpj  os2_16.wpj  os2_32.wpj  win32.wpj
setter/projects/xcode/: README.md
setter/src/: CMakeLists.txt  README.md  defs.h  dos.c  dos.h  dosos2.h  linux.c  linux.h  log.c  log.h  macos.c  macos.h  macos.r  main.c  main.h  netware.c  netware.h  os2_16.c  os2_16.h  os2_32.c  os2_32.h  unix.c  unix.h  win32.c  win32.h
setter/src/8bit/: files.c  main.c
setter/src/amiga/: CMakeLists.txt  README.md  attr.c  deleted.c  dirdepth.c  filename.c  files.c  frag.c  links.c  os.c  perms.c  perms.h  sparse.c  time.c  time.h  volume.c  xattr.c
setter/src/atarist/: CMakeLists.txt  README.md  attr.c  attr.h  deleted.c  dirdepth.c  filename.c  files.c  frag.c  links.c  os.c  os.h  perms.c  perms.h  rsrcfork.c  time.c  tostime.h  volume.c
setter/src/beos/: CMakeLists.txt  README.md  attr.c  beostime.h  deleted.c  dirdepth.c  frag.c  os.c  perms.c  perms.h  sparse.c  time.c  time.h  volume.c  volume.h  xattr.c  xattr.h
setter/src/bsd/: CMakeLists.txt  attr.c  attr.h  bsd.h  xattr.c  xattr.h
setter/src/darwin/: CMakeLists.txt  attr.c  attr.h  carbon.c  carbon.h  darwin.h  os.c  rsrcfork.c  rsrcfork.h  sparse.c  volume.c  volume.h  xattr.c
setter/src/dos/: CMakeLists.txt  README.md  attr.c  attr.h  deleted.c  dirdepth.c  djgpp.c  dos.c  dos.h  dosdefs.h  dostime.h  dosuname.c  dosuname.h  filename.c  files.c  frag.c  links.c  os.c  perms.c  rsrcfork.c  sparse.c  time.c  time.h  volume.c  xattr.c
setter/src/include/: README.md  consts.h  defs.h  dosos2.h
setter/src/linux/: CMakeLists.txt  attr.c  attr.h  linux.c  linux.h  sparse.c  volume.c  xattr.c  xattr.h
setter/src/macos/: ._attr.c  ._attr.h  ._deleted.c  ._dirdepth.c  ._filename.c  ._files.c  ._frag.c  ._fssetter.rsrc  ._links.c  ._links.h  ._macos.h  ._macos.r  ._os.c  ._retro68.h  ._rsrcfork.c  ._rsrcfork.h  ._snprintf.c  ._time.c  ._volume.c  CMakeLists.txt  README.md  attr.c  attr.h  deleted.c  dirdepth.c  filename.c  files.c  frag.c  links.c  links.h  macos.h  macos.r  os.c  perms.c  retro68.h  rsrcfork.c  rsrcfork.h  snprintf.c  sparse.c  time.c  (+3 more)
setter/src/netware/: README.md  attr.c  deleted.c  dirdepth.c  filename.c  files.c  frag.c  links.c  netware.h  os.c  perms.c  rsrcfork.c  sparse.c  time.c  volume.c  xattr.c
setter/src/os2/: CMakeLists.txt  README.md  attr.c  attr.h  deleted.c  dirdepth.c  filename.c  files.c  frag.c  links.c  os2.h  os2defs.h  perms.c  rsrcfork.c  sparse.c  time.c  volume.c
setter/src/os2/16bit/: attr.c  (+16 more)
setter/src/unix/: CMakeLists.txt  README.md  attr.c  deleted.c  dirdepth.c  filename.c  files.c  frag.c  links.c  os.c  perms.c  perms.h  rsrcfork.c  sparse.c  time.c  time.h  unix.c  unix.h  volume.c  volume.h  xattr.c
setter/src/win32/: CMakeLists.txt  README.md  attr.c  attr.h  deleted.c  dirdepth.c  filename.c  files.c  frag.c  links.c  links.h  os.c  os.h  perms.c  perms.h  rsrcfork.c  rsrcfork.h  sparse.c  sparse.h  time.c  time.h  timew32.h  volume.c  volume.h  win32.c  win32.h  xattr.c  xattr.h
setter/src/z80/: dirdepth.c  filename.c  files.c  main.c
setter/toolchains/: README.md  djgpp.cmake  genow.sh  ow-os2.cmake
(+313 files in other folders)
